# PGPa_Volumetric_Rendering

./: .gitignore  CMakeLists.txt  README.md
doc/: project.aux  project.bbl  project.bib  project.blg  project.out  project.tex
res/shaders/: isometricTransferF.shader  lightCube.shader  surfacePlane.shader  volumeRendering.shader  volumeRendering2.shader
screenshots/: 2022-12-05-21-03-44.tga  2022-12-13-11-22-53.tga
src/: Application.cpp
src/graphics/: ArcballCamera.cpp  ArcballCamera.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/models/: TestModel.cpp  TestModel.h  VolumeRendering.cpp  VolumeRendering.h
src/objects/: SurfacePlane.cpp  SurfacePlane.h  Texture.cpp  Texture.h  TransferFunction.cpp  TransferFunction.h  UnitCube.cpp  UnitCube.h  VolumeTexture.cpp  VolumeTexture.h
